feat (auth): Implemented JWT authentication and session management functionality
- Integrated JWT refresh token mechanism, supporting 15-minute access tokens and 7-day refresh tokens
- Added secure cookie configuration to support cross-site request forgery protection
- Implemented session management functionality, including viewing, revoking, and logging out of all devices
- Integrated login history functionality to track user login activity
- Added rate limiting and account lockout mechanisms to prevent brute-force attacks
- Implemented automatic token refresh on the front end to optimize user experience
- Configured Vite proxy to support relative path API calls
- Updated internationalization support, added Chinese date formatting
- Modified password verification rules to strengthen security requirements
- Added real-time authentication status checks and removed local storage dependency